@@ -1,10 +1,11 @@
 package com.rd.rpc.server;
 
+import com.rd.rpc.RpcApplication;
 import com.rd.rpc.model.RpcRequest;
 import com.rd.rpc.model.RpcResponse;
 import com.rd.rpc.registry.LocalRegistry;
-import com.rd.rpc.serializer.JdkSerializer;
 import com.rd.rpc.serializer.Serializer;
+import com.rd.rpc.serializer.SerializerFactory;
 import io.vertx.core.Handler;
 import io.vertx.core.buffer.Buffer;
 import io.vertx.core.http.HttpServerRequest;
@@ -20,8 +21,8 @@ public class HttpServerHandler implements Handler<HttpServerRequest> {
 
     @Override
     public void handle(HttpServerRequest request) {
-        // 指定序列化器
-        final Serializer serializer = new JdkSerializer();
+        // 使用配置的序列化器
+        final Serializer serializer = SerializerFactory.getInstance(RpcApplication.getRpcConfig().getSerializer());
 
         // 记录日志
         System.out.println("Received request: " + request.method() + " " + request.uri());
@@ -49,7 +50,7 @@ public class HttpServerHandler implements Handler<HttpServerRequest> {
                 // 获取要调用的服务实现类，通过反射调用
                 Class<?> implClass = LocalRegistry.get(rpcRequest.getServiceName());
                 Method method = implClass.getMethod(rpcRequest.getMethodName(), rpcRequest.getParameterTypes());
-                Object result = method.invoke(implClass.newInstance(), rpcRequest.getArgs());
+                Object result = method.invoke(implClass.getDeclaredConstructor().newInstance(), rpcRequest.getArgs());
                 // 封装返回结果
                 rpcResponse.setData(result);
                 rpcResponse.setDataType(method.getReturnType());
@@ -72,8 +73,12 @@ public class HttpServerHandler implements Handler<HttpServerRequest> {
      * @param serializer
      */
     void doResponse(HttpServerRequest request, RpcResponse rpcResponse, Serializer serializer) {
+        // 根据序列化器类型设置正确的Content-Type
+        String serializerKey = RpcApplication.getRpcConfig().getSerializer();
+        String contentType = getContentType(serializerKey);
+        
         HttpServerResponse httpServerResponse = request.response()
-                .putHeader("content-type", "application/json");
+                .putHeader("content-type", contentType);
         try {
             // 序列化
             byte[] serialized = serializer.serialize(rpcResponse);
@@ -81,6 +86,23 @@ public class HttpServerHandler implements Handler<HttpServerRequest> {
         } catch (IOException e) {
             e.printStackTrace();
             httpServerResponse.end(Buffer.buffer());
+        }
+    }
+
+    /**
+     * 根据序列化器类型获取Content-Type
+     *
+     * @param serializerKey 序列化器键名
+     * @return Content-Type
+     */
+    private String getContentType(String serializerKey) {
+        if ("json".equals(serializerKey)) {
+            return "application/json";
+        } else if ("hessian".equals(serializerKey)) {
+            return "application/x-hessian";
+        } else {
+            // JDK、Kryo等其他序列化器使用二进制格式
+            return "application/octet-stream";
         }
     }
 }
